# ldpred3

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  _method_worker.py  bench_bigsnpr_blocks.R  bench_cold_init.py  bench_ldpred3_scaling.py  bench_methods.py  bench_vs_bigsnpr.py  bivariate_demo.py  block_splitting.py  calibration.py  cold_init_auto.csv  compare_bivariate_rg.py  compare_ldsc_infer.py  cores_1core_benchmark.csv  cores_benchmark.csv  cores_realistic_benchmark.csv  cores_scaling.py  dentist_recovery.py  diagnose_annot.py  finemap_architectures.py  finemap_genomewide.py  finemap_recovery.py  impute_annot.py  impute_missingness.py  impute_portability.py  impute_timing.py  infer_architectures.py  infer_recovery.py  infer_scaling.py  inference_benchmark.py  laplace_vs_lasso.csv  laplace_vs_lasso.py  ld_lowrank.py  ld_memory_scaling.py  ld_representations.py  ld_shrink_large_blocks.py  ldpred3_scaling.csv  maf_alpha_prior.csv  maf_alpha_prior.py  make_ld_library.py  (+17 more)
docs/: algorithm.md  benchmarks.md  finemap.md  guide.md  impute.md  inference.md  pipeline.md
ldpred3/: __init__.py  __main__.py  _numba.py  annot.py  bgen_io.py  bivariate.py  cli.py  finemap.py  genotype_io.py  harmonize.py  impute.py  infer.py  laplace.py  lassosum.py  ld.py  ld_utils.py  ldpred3.py  ldsc.py  pipeline.py  prs.py  qc.py  scale.py  simulate.py  sumstats.py
pyldpred2/: __init__.py  annot.py  bgen_io.py  bivariate.py  genotype_io.py  infer.py  ld.py  ld_utils.py  ldpred2.py  ldsc.py  pipeline.py  qc.py  simulate.py  sumstats.py
src/: bgen_io.py  etc.py  genotype_io.py  harmonize.py  infer.py  iprs.py  ld.py  ldpred2.py  parse_register_data.py  pipeline.py  prs.py  simulate.py  sumstats.py
tests/: _helpers.py  test_annot.py  test_bgen_io.py  test_bivariate.py  test_finemap.py  test_genotype_io.py  test_golden.py  test_impute.py  test_infer.py  test_laplace.py  test_lassosum.py  test_ldpred2.py  test_ldpred3.py  test_ldsc.py  test_pipeline.py  test_prior_weights.py  test_prs.py  test_qc.py  test_real_sumstats.py  test_scale.py  test_simulate.py  test_smoke_compact.py  test_sumstats_harmonize.py  test_usability.py
