[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpred3"
version = "0.1.0"
description = "A NumPy-only implementation of LDpred3 with a full polygenic-score pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bjarni Vilhjálmsson" }]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
fast = ["numba>=0.59"]          # JIT-compiled Gibbs sampler (strongly recommended)
sim = ["msprime>=1.3"]          # realistic-LD (coalescent) simulation
test = ["pytest>=7"]

[project.scripts]
ldpred3 = "ldpred3.pipeline:_main"

[tool.setuptools]
packages = ["ldpred3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
